--- a/package.json
+++ b/package.json
@@ -47,7 +47,11 @@
     "prepare:package": "node scripts/prepare-package.js",
     "release:version": "node scripts/version.js",
     "telemetry": "node scripts/telemetry.js",
-    "clean": "node scripts/clean.js"
+    "clean": "node scripts/clean.js",
+    "agent:setup": "./scripts/agent-integration.sh setup",
+    "agent:session": "./scripts/agent-integration.sh session",
+    "agent:check": "./scripts/agent-integration.sh check",
+    "agent:validate": "./scripts/agent-integration.sh validate"
   },
   "bin": {
     "ai-cli": "bundle/gemini.js",
