Agent SamuelBlue: feat: Phase 1 - Rebrand AI CLI to Chat CLI
- Updated package.json: name, version, repository, binary commands
- Renamed startup script: start_ai_cli.sh -> start_chat_cli.sh
- Updated fork information to reflect Chat CLI branding
- Modified README with Chat CLI focus and Ollama/Claude configuration
- Updated documentation to remove Google references
- Changed project emoji from 🤖 to 💬
- Updated agent integration scripts for Chat CLI
- Prepared for Google dependency removal and local AI focus

--- a/.ai-agent-config.yml
+++ b/.ai-agent-config.yml
@@ -1,11 +1,11 @@
-# AI CLI Project Configuration
-# Agent workspace integration for the AI CLI project
+# Chat CLI Project Configuration
+# Agent workspace integration for the Chat CLI project
 
 project:
-  name: "ai-cli"
-  emoji: "🤖"
+  name: "chat-cli"
+  emoji: "💬"
   type: "development"
-  description: "Enhanced fork of Gemini CLI with custom AI development features"
+  description: "Local-first AI chat interface supporting Ollama and Claude models"
   
 agent_workspace:
   enabled: true
@@ -41,6 +41,10 @@ integration:
   sync_strategy: "merge"
   
 features:
+  ollama_support: true
+  claude_support: true
+  local_first: true
+  no_google_deps: true
   custom_startup: true
   enhanced_docs: true
   dual_binary: true
