Agent SamuelBlue: feat: Complete Chat CLI transformation documentation and final updates
- Updated test script with new Chat CLI testing instructions
- Fixed repository references in agent configuration
- Corrected startup script branding consistency
- Added comprehensive TRANSFORMATION_PROGRESS.md documenting:
  * Complete rebranding from AI CLI to Chat CLI
  * Ollama and Claude integration implementation
  * Testing infrastructure with /testchat command
  * Migration strategy and remaining work
  * Success metrics and future enhancements
- Project successfully transformed to local-first AI interface

--- a/.ai-agent-config.yml
+++ b/.ai-agent-config.yml
@@ -37,7 +37,7 @@ scripts:
   
 integration:
   upstream_repo: "https://github.com/google-gemini/gemini-cli.git"
-  fork_repo: "https://github.com/relix42/ai-cli.git"
+  fork_repo: "https://github.com/relix42/chat-cli.git"
   sync_strategy: "merge"
   
 features:
