Agent SamuelBlue: feat: Complete transformation to GrooveForge 🎵⚒️
- Rebranded from Chat CLI to GrooveForge with creative new identity
- Updated package.json: @relix42/grooveforge with grooveforge/groove commands
- Enhanced fork information with groove/forge theme and tagline
- Updated all commands and documentation with GrooveForge branding
- Renamed startup script: start_grooveforge.sh with enhanced messaging
- Updated agent configuration with 🎵⚒️ emoji and groove theme
- Comprehensive documentation updates throughout project
- Maintained all technical functionality while improving creative identity
- Ready for users to find their groove and forge their future with AI

--- a/.ai-agent-config.yml
+++ b/.ai-agent-config.yml
@@ -1,11 +1,11 @@
-# Chat CLI Project Configuration
-# Agent workspace integration for the Chat CLI project
+# GrooveForge Project Configuration
+# Agent workspace integration for the GrooveForge project
 
 project:
-  name: "chat-cli"
-  emoji: "💬"
+  name: "grooveforge"
+  emoji: "🎵⚒️"
   type: "development"
-  description: "Local-first AI chat interface supporting Ollama and Claude models"
+  description: "Find your groove, forge your future - Local AI development companion"
   
 agent_workspace:
   enabled: true
@@ -37,7 +37,7 @@ scripts:
   
 integration:
   upstream_repo: "https://github.com/google-gemini/gemini-cli.git"
-  fork_repo: "https://github.com/relix42/chat-cli.git"
+  fork_repo: "https://github.com/relix42/grooveforge.git"
   sync_strategy: "merge"
   
 features:
